force-app/main/default/objects/API__c/Api__c.object-meta.xml
<CustomObject>
    <label>Api</label>
    <nameField>
        <label>Api Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apis</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>