force-app/main/default/objects/API__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Name</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>APIS</relationshipLabel>
    <relationshipName>APIS</relationshipName>
    <type>Lookup</type>
</CustomField>