force-app/main/default/objects/API__c/fields/Data_Classification__c.field-meta.xml
<CustomField>
    <fullName>Data_Classification__c</fullName>
    <label>Data Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highly Confidential</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>