force-app/main/default/objects/API__c/recordTypes/Old_Record.recordType-meta.xml
<RecordType>
    <fullName>Old_Record</fullName>
    <active>true</active>
    <label>Old Record</label>
</RecordType>