force-app/main/default/objects/API__c/validationRules/API_Application_name_field_is_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>API_Application_name_field_is_not_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Application_Name__c )</errorConditionFormula>
    <errorDisplayField>Application_Name__c</errorDisplayField>
    <errorMessage>Application Name should not be  blank.</errorMessage>
</ValidationRule>