force-app/main/default/objects/API__c/listViews/Admin_API.listView-meta.xml
<ListView>
    <fullName>Admin_API</fullName>
    <filterScope>Queue</filterScope>
    <label>Admin</label>
    <queue>Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>