force-app/main/default/objects/API__c/listViews/Created_by.listView-meta.xml
<ListView>
    <fullName>Created_by</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Created by</label>
</ListView>