force-app/main/default/objects/API__c/listViews/Created_Date.listView-meta.xml
<ListView>
    <fullName>Created_Date</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Created Date</label>
</ListView>