force-app/main/default/objects/API__c/listViews/Status.listView-meta.xml
<ListView>
    <fullName>Status</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Status</label>
</ListView>