force-app/main/default/objects/API__c/listViews/Supervisor_API.listView-meta.xml
<ListView>
    <fullName>Supervisor_API</fullName>
    <filterScope>Queue</filterScope>
    <label>Supervisor</label>
    <queue>Supervisor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>